<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="is_full_switch"
        android:summary="@string/pref_description_easy_full"
        android:title="@string/pref_title_easy_full" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="4"
        android:entries="@array/pref_choices_list_entries"
        android:entryValues="@array/pref_choices_list_values"
        android:key="choices_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_choices_title" />

    <ListPreference
        android:defaultValue="50"
        android:entries="@array/pref_count_list_entries"
        android:entryValues="@array/pref_count_list_values"
        android:key="count_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_count_title"
        android:enabled="false" />

</PreferenceScreen>
