<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  	android:background="@color/darkBG"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkBG"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    android:theme="@android:style/Theme.Holo.NoActionBar"
    tools:context="com.pikamander2.japanesequizz.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="37dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonHiragana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="@dimen/button_min_height"
            android:minWidth="@dimen/button_min_width"
            android:text="@string/buttonHiragana"
            android:textColor="@color/lightText"
            android:textSize="@dimen/button_font_size" />

        <Button
            android:id="@+id/buttonKatakana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:minHeight="@dimen/button_min_height"
            android:minWidth="@dimen/button_min_width"
            android:text="@string/buttonKatakana"
            android:textColor="@color/lightText"
            android:textSize="@dimen/button_font_size" />

        <Button
            android:id="@+id/buttonMixture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:minHeight="@dimen/button_min_height"
            android:minWidth="@dimen/button_min_width"
            android:text="@string/buttonMixture"
            android:textColor="@color/lightText"
            android:textSize="@dimen/button_font_size" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/VersionNumber"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightText"
            android:textSize="@dimen/version_font_size" />
    </LinearLayout>

</RelativeLayout>

</ScrollView>
